--- a/module/templates/add.html
+++ b/module/templates/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Student Score</title>
+    <title>添加学生成绩</title>
 </head>
 <body>
 
