--- a/module/templates/delete.html
+++ b/module/templates/delete.html
@@ -14,7 +14,7 @@
     <label for="student_id">学生学号:</label>
     <input type="text" id="student_id" name="student_id" required><br>
 
-    <input type="submit" value="提交">
+    <input type="submit" value="删除">
 </form>
 
 </body>
