--- a/module/templates/studentRegister.html
+++ b/module/templates/studentRegister.html
@@ -9,8 +9,8 @@
 <h2>学生管理系统</h2>
 
 <form action="/login" method="post">
-    <label for="username">学生学号:</label>
-    <input type="text" id="username" name="username" required><br><br>
+    <label for="number">学生学号:</label>
+    <input type="text" id="number" name="number" required><br><br>
 
     <label for="password">密码:</label>
     <input type="password" id="password" name="password" required><br><br>
