--- a/module/templates/studentRegister.html
+++ b/module/templates/studentRegister.html
@@ -8,7 +8,7 @@
 
 <h2>学生管理系统</h2>
 
-<form action="/login" method="post">
+<form action="/register" method="post">
     <label for="number">学生学号:</label>
     <input type="text" id="number" name="number" required><br><br>
 
