--- a/module/templates/select.html
+++ b/module/templates/select.html
@@ -15,8 +15,9 @@
     <label for="password">密码:</label>
     <input type="password" id="password" name="password" required><br><br>
 
-    <input type="submit" value="学生登录">
-    <input type="submit" value="管理员登录">
+    <input type="submit" name="action" value="学生登录">
+    <input type="submit" name="action" value="管理员登录">
+
 </form>
 
 <a href="/register">学生注册</a>
