--- a/module/templates/studentPage.html
+++ b/module/templates/studentPage.html
@@ -27,10 +27,13 @@
     </tr>
     <tr>
         <td>{{.Name}}</td>
-        <td>{{.ID}}</td>
+        <td>{{.Number}}</td>
         <td>{{.Score}}</td>
     </tr>
 </table>
+
+<form action="/studentPage" method="post">
+</form>
 
 </body>
 </html>
