--- a/module/templates/home.html
+++ b/module/templates/home.html
@@ -27,7 +27,7 @@
         var choice = document.getElementById('student-options').value;
         switch (choice) {
             case '1':
-                window.location.href = "/static/query.html";
+                window.location.href = "/static/queryAll.html";
                 break;
             case '2':
                 window.location.href = "/static/query.html";
@@ -41,12 +41,10 @@
             case '5':
                 window.location.href = "/static/delete.html";
                 break;
-            case '0':
-                alert('退出系统，请关闭网页');
-                window.location.href = "/static/login.html"; // 重定向到退出系统的页面
-                break;
             default:
-                alert('选项无效，请重新输入');
+                alert('退出系统，请关闭网页');
+                window.location.href = "/static/login.html";
+                break;
         }
     });
 </script>
