--- a/module/templates/home.html
+++ b/module/templates/home.html
@@ -27,7 +27,7 @@
         var choice = document.getElementById('student-options').value;
         switch (choice) {
             case '1':
-                window.location.href = "/static/queryAll.html";
+                window.location.href = "/queryAll";
                 break;
             case '2':
                 window.location.href = "/static/query.html";
