--- a/module/templates/addsuccess.html
+++ b/module/templates/addsuccess.html
@@ -8,7 +8,7 @@
 <body>
 <h2>添加成功</h2>
 <p>新加入的学生学号为：{{.InsertedID}}</p>
-<a href="/add">继续添加</a>
+<a href="/insert">继续添加</a>
 <a href="/home">返回主页</a>
 </body>
 </html>
