--- a/module/templates/home.html
+++ b/module/templates/home.html
@@ -33,10 +33,10 @@
                 window.location.href = "/static/query.html";
                 break;
             case '3':
-                window.location.href = "/static/edit.html";
+                window.location.href = "/static/update.html";
                 break;
             case '4':
-                window.location.href = "/static/add.html";
+                window.location.href = "/insert";
                 break;
             case '5':
                 window.location.href = "/static/delete.html";
