--- a/module/templates/update.html
+++ b/module/templates/update.html
@@ -13,8 +13,8 @@
 
 <input type="hidden" name="id" value="{{.ID}}">
 
-<label for="name">学生姓名:</label>
-<input type="text" id="name" name="name" value="" required><br>
+<label for="number">学生学号:</label>
+<input type="text" id="number" name="number" value="" required><br>
 
 <label for="score">学生分数:</label>
 <input type="text" id="score" name="score" value="" required><br>
