--- a/module/templates/updatesuccess.html
+++ b/module/templates/updatesuccess.html
@@ -8,8 +8,8 @@
 <body>
 <h2>修改成功</h2>
 <p>已修改的学号为：{{.InsertedID}}</p>
-<p>修改后的分数为：{{.InsertedID}}</p>
-<a href="/update">继续添加</a>
+<p>修改后的分数为：{{.Score}}</p>
+<a href="/update">继续修改</a>
 <a href="/home">返回主页</a>
 </body>
 </html>
