--- a/module/templates/studentPage.html
+++ b/module/templates/studentPage.html
@@ -5,13 +5,21 @@
     <title>学生信息</title>
     <style>
         table {
-            width: 100%;
+            width: 50%;
             border-collapse: collapse;
         }
         th, td {
             border: 1px solid black;
             padding: 8px;
             text-align: left;
+        }
+        .button-link {
+            display: inline-block;
+            text-decoration: none;
+            color: initial;
+        }
+        button {
+            cursor: pointer;
         }
     </style>
 </head>
@@ -32,8 +40,9 @@
     </tr>
 </table>
 
-<form action="/studentPage" method="post">
-</form>
+<a href="/studentSelect" class="button-link">
+    <button type="button">继续选课</button>
+</a>
 
 </body>
 </html>
