--- a/module/templates/home.html
+++ b/module/templates/home.html
@@ -24,9 +24,12 @@
 <!-- 添加发送信息的窗口 -->
 <div>
     <h3>发送信息</h3>
-    <textarea id="messageBox" rows="4" cols="50" placeholder="在这里输入信息..."></textarea>
-    <br>
-    <button onclick="sendMessage()">发送信息</button>
+    <!-- 添加表单来提交信息 -->
+    <form action="/sendMessage" method="post">
+        <textarea name="message" id="messageBox" rows="4" cols="50" placeholder="在这里输入信息..."></textarea>
+        <br>
+        <input type="submit" value="发送信息"/>
+    </form>
 </div>
 
 <script>
