--- a/module/templates/home.html
+++ b/module/templates/home.html
@@ -16,6 +16,7 @@
         <option value="4">新增学生信息</option>
         <option value="5">删除学生信息</option>
         <option value="6">发送通知信息</option>
+        <option value="7">添加学生平时成绩</option>
         <option value="0">退出系统</option>
     </select>
     <br><br>
@@ -45,6 +46,9 @@
                 break;
             case '6':
                 window.location.href = "/sendMessage";
+                break;
+            case '7':
+                window.location.href = "/integral";
                 break;
             default:
                 alert('退出系统，请关闭网页');
