--- a/module/templates/studentPage.html
+++ b/module/templates/studentPage.html
@@ -27,6 +27,9 @@
             border-radius: 5px;
             color: #333;
         }
+        .logout-button {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -68,6 +71,10 @@
 
     <button type="submit">投票</button>
 </form>
+
+<a href="/logout" class="button-link logout-button">
+    <button type="button">退出</button>
+</a>
 
 </body>
 </html>
