--- a/module/templates/studentPage.html
+++ b/module/templates/studentPage.html
@@ -8,17 +8,20 @@
             width: 50%;
             border-collapse: collapse;
         }
+
         th, td {
             border: 1px solid black;
             padding: 8px;
             text-align: left;
         }
+
         .button-link, button {
             display: inline-block;
             text-decoration: none;
             color: initial;
             cursor: pointer;
         }
+
         .info-box {
             padding: 10px;
             margin: 20px 0;
@@ -27,6 +30,7 @@
             border-radius: 5px;
             color: #333;
         }
+
         .logout-button {
             margin-top: 20px;
         }
@@ -72,9 +76,19 @@
     <button type="submit">投票</button>
 </form>
 
+
+<form action="/signIn" method="post">
+    <button type="submit">签到</button>
+</form>
+
+
 <a href="/logout" class="button-link logout-button">
     <button type="button">退出</button>
 </a>
+
+<div class="info-box">
+    您本月已经签到<span id="signCount">{{.SignCount}}</span>次
+</div>
 
 </body>
 </html>
