--- a/module/templates/studentPage.html
+++ b/module/templates/studentPage.html
@@ -54,8 +54,9 @@
 </table>
 
 <div id="infoBox" class="info-box">
-    {{.Message}}
+    最新消息：{{.Message}}
 </div>
+
 
 <a href="/studentSelect" class="button-link">
     <button type="button">继续选课</button>
