--- a/module/templates/sendMessage.html
+++ b/module/templates/sendMessage.html
@@ -11,8 +11,8 @@
 
 <div>
     <h3>请输入信息</h3>
-    <form action="/sendMessage" method="post">
-        <textarea name="message" id="messageBox" rows="4" cols="50" placeholder="在这里输入信息..."></textarea>
+    <form action="/sendMessage" method="POST">
+    <textarea name="message" id="messageBox" rows="4" cols="50" placeholder="在这里输入信息..."></textarea>
         <br>
         <input type="submit" value="发送信息"/>
     </form>
