--- a/module/templates/home.html
+++ b/module/templates/home.html
@@ -20,7 +20,7 @@
         <option value="0">退出系统</option>
     </select>
     <br><br>
-    <input type="submit" value="提交">
+    <input type="submit" value="选择">
 </form>
 
 
